--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<!-- <div class="notif">
 					<div class="notif-header">
 						<div class="notif-title">Title</div>
-						<div class="notif-close">X</div>
+						<div class="notif-close">&#x2715</div>
 					</div>
 					<div class="notif-content">Content</div>
 				</div> -->
